styles.css
/* General adjustments */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html { 
  scroll-behavior: smooth; 
}

body {
  margin: 0;
  line-height: 1.6;
  color: #333;
  background-color: #f9f9f9;
  font-family: Arial, Helvetica, sans-serif;
}

/* Header section */
header {
  position: sticky;
  top: 0;
  z-index: 1000;
  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
  height: 80px;
  padding: 30px;
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-family: "Noto Sans", sans-serif;
}

header h1 {
  margin-bottom: 5px;
  font-size: 2rem;
  font-weight: 600;
  color: white;
}

header #name { text-decoration: none; }

nav ul {
  list-style: none;
  display: flex;
  justify-content: center;
  gap: 35px;
}

nav ul li a {
  color: #fff;
  text-decoration: none;
  font-size: 1.2rem;
  font-weight: 600;
  transition: color 0.3s ease;
}

nav ul li a:hover { color: #edea30; }




/* General section styles */
section {
  padding: 30px 50px;
  margin: 0 auto;
  scroll-margin-top: 70px;
}

section h2 {
  padding-top: 30px;
  padding-bottom: 25px;
  border-top: 2px solid #80D0C7;
  text-align: center;
  font-size: 2rem;
  font-family: "Noto Sans", sans-serif;
}

section p { font-size: 1rem; }



/* Hero section */
#hero {
  height: 85vh;
  background: rgb(74,52,170);
  background: linear-gradient(0deg, rgba(74,52,170,1) 0%, rgba(171,118,207,1) 100%);
  position: relative;
  overflow: hidden;
}



/* Typewriter styles */
#typewriter-container {
  height: 400px;
  padding-top: 5%;
  margin-left: 30px;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  color: white;
}

#typewriter-container #line1 {
  width: fit-content;
  font-size: 3.5rem;
}

#typewriter-container #line2 {
  width: fit-content;
  font-size: 1.5rem;
}

.cursor {
  margin-left: 3px;
  margin-bottom: -3px;
  background-color: white; 
  animation: blink 1s step-end infinite; 
}

#line1-cursor {
  height: 55px;
  width: 3px;
  display: inline-block;
}

#line2-cursor {
  height: 25px;
  width: 2px;
  display: inline;
}

@keyframes blink {
  50% { opacity: 0; /* Make it disappear midway through the animation */ }
}


/* Waves */
#shape {
  position: absolute;
  right: 0;
  bottom: -0.5vw;
  width: 100%;
}

#hero img:not(#shape) {
  position: absolute;
  left: 0;
}

#hero #wave-1 {
  opacity: 0.4;
  bottom: -0.1vw;
  animation: move-wave-1 5s infinite;
}

@keyframes move-wave-1 { 
  50% { transform: translateY(15px); }
}

#hero #wave-2 {
  opacity: 0.3;
  bottom: 0.5vw;
  animation: move-wave-2 4s infinite;
}

@keyframes move-wave-2 {
  50% { transform: translateY(35px); }
}

#hero #wave-3 {
  bottom: 0.3vw;
  opacity: 0.2;
  animation: move-wave-3 3.5s infinite;
}

@keyframes move-wave-3 {
  50% { transform: translateY(25px); }
}

#hero #wave-4 {
  bottom: 0.1vw;
  opacity: 0.3;
  animation: move-wave-4 3s infinite;
}

@keyframes move-wave-4 {
  50% { transform: translateY(20px) }
}




/* About section */
#about p { padding: 0px 200px; }



/* Projects section */
#projects-container {
  margin-top: 20px;
  display: flex;
  flex-wrap: wrap;
  gap: 50px;
  justify-content: center;
}

.project {
  max-height: 500px;
  width: 100%;
  max-width: 550px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 0.8rem;
}

.project h3 { font-family: 'Inter', sans-serif; }

.project img {
  aspect-ratio: 16 / 9;
  width: 100%;
  display: block;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  transition: transform 0.3s ease;
}

.project img:hover { transform: scale(1.01); }

.project ul {
  display: flex;
  justify-content: center;
  padding-top: 10px;
  list-style: none;
  gap: 13px;
}

.project ul li {
  font-size: 1rem;
  font-weight: 300;
  font-family: "Lexend Deca", sans-serif;
  padding: 2px 8px;
  border: 1.5px solid rgb(86, 85, 87);
  border-radius: 6px;
}

.project p {
    text-align: center;
    padding: 0px 20px;
}




/* Contact section */
form {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

form label { font-weight: bold; }

form input, form textarea, form button {
  padding: 10px;
  font-size: 1rem;
  border: 1px solid #ddd;
  border-radius: 5px;
}

form button {
  background: #0077cc;
  color: #fff;
  border: none;
  cursor: pointer;
  transition: background 0.3s ease;
}

form button:hover { background: #005fa3; }



.contact-links {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3rem;
  padding: 30px 0px 50px 0px;
}

.contact-link {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  text-decoration: none;
  color: #333;
  font-size: 1.2rem;
  font-family: 'Inter', sans-serif;
  transition: color 0.3s ease, transform 0.3s ease;
}

.contact-link img {
  width: 24px;
  height: 24px;
  transition: transform 0.3s ease;
}

.contact-link:hover {
  color: #0077b5; /* Example color for LinkedIn */
  transform: translateY(-2px);
}

.contact-link:hover img { transform: scale(1.1); }





/* Footer styles */
footer {
  height: 50px;
  display: flex;
  justify-content: center;  /* Horizontal centering */
  align-items: center;  /* Vertical centering */
  background-color: #80D0C7;
  font-family: 'Inter', sans-serif;
  color: white;
  font-weight: bold;
  font-size: small;
}


/* Hamburger menu styles */
.menu-toggle {
  position: absolute;
  display: none;
  flex-direction: column;
  cursor: pointer;
  top: 22px;
  right: 20px;
}

.bar {
  width: 40px;
  height: 4px;
  margin: 4px;
  background-color: white;
  border-radius: 1px;
  transition: all 0.2s ease-in-out;
}

.menu-toggle.active span:nth-child(1) {
  transform: translateY(12px) rotate(45deg);
}

.menu-toggle.active span:nth-child(2) {
  opacity: 0;
}

.menu-toggle.active span:nth-child(3) {
  transform: translateY(-12px) rotate(-45deg);
}



/* ============================================================================================================ */
/* ============================================================================================================ */
/*                                               Media Queries                                                  */

/* Extra small devices (phones in portrait mode) */
@media (max-width: 599px) {

  header h1 {
    font-size: 1.5em;
  }

  header nav ul {
    display: none;
    width: 100%;
    position: absolute;
    top: 80px;
    left: 0;
    background-color: #384fa2;
    flex-direction: column;
    text-align: center;
  }

  header nav ul.active {
    display: flex;
    gap: 5px;
    padding: 10px;
  }

  .menu-toggle {
    display: flex;
  }
  
  #typewriter-container {
    padding-top: 30%;
    margin-left: 0;
    text-align: center;
  }

  #typewriter-container #line1 {
    font-size: 2em;
  }

  #about p { padding: 0px 0px; }

}

/* Small devices (phones in landscape mode) */
@media (min-width: 600px) and (max-width: 767px) {

  header nav ul {
    display: none;
    width: 100%;
    position: absolute;
    top: 80px;
    left: 0;
    background-color: #384fa2;
    flex-direction: column;
    text-align: center;
  }

  header nav ul.active {
    display: flex;
    gap: 5px;
    padding: 10px;
  }

  .menu-toggle {
    display: flex;
  }
  
  #typewriter-container {
    padding-top: 15%;
  }

  #about p { padding: 0px 40px; }

}

/* Medium devices (tablets) */
@media (min-width: 768px) and (max-width: 1023px) {

  #typewriter-container {
    padding-top: 15%;
  }

  #about p { padding: 0px 80px; }

}

/* Large devices (laptops and small desktops) */
@media (min-width: 1024px) and (max-width: 1279px) {
  /* Original CSS */
}

/* Extra large devices (desktops and large screens) */
@media (min-width: 1280px) {
  /* No need to change anything */
}

